# MARL

./: .gitignore  DEPENDENCY_UPDATE.md  QUICKSTART_WINDOWS.md  README.md  VIDEO_REMOVAL_CHANGES.md  WINDOWS_SETUP.md  repo.md
cus_gym/: README.md  requirements.txt  setup.py
cus_gym/.github/workflows/: build.yml
cus_gym/gym/: __init__.py
cus_gym/gym/envs/customized_envs/: VideoWriter.py  __init__.py  assembly.py
cus_gym/gym/envs/customized_envs/envs_cplus/: CMakeLists.txt  c_lib.py
cus_gym/gym/envs/customized_envs/envs_cplus/src/: AssemblyEnv.cpp  AssemblyEnv.h  test.cpp
cus_gym/gym/wrappers/: __init__.py
cus_gym/gym/wrappers/customized_envs/: assembly_wrapper.py
llm/test/2025-09-27-23-55-56/: log.md
marl_llm/: requirements.txt
marl_llm/cfg/: assembly_cfg.py
marl_llm/eval/: collect_expert_data.py  eval_assembly.py
marl_llm/llm/modules/framework/actions/: rl_generate_functions.py
marl_llm/llm/modules/prompt/: auxiliary_info.py  robot_api_prompt.py  user_instructions.py
marl_llm/train/: train_assembly.py
marl_llm/train/models/assembly/2025-09-28-00-16-32/incremental/: model_ep1.pt  model_ep41.pt  model_ep81.pt
marl_llm/train/models/assembly/2025-09-28-00-16-32/logs/: events.out.tfevents.1759004192.Sulaimans-MacBook-Pro.local
marl_llm/train/models/assembly/2025-09-28-00-28-34/logs/: events.out.tfevents.1759004914.Sulaimans-MacBook-Pro.local
marl_llm/train/models/assembly/2025-09-28-00-35-15/incremental/: model_ep41.pt
marl_llm/train/models/assembly/2025-09-28-00-57-17/: model.pt
(+190 files in other folders)
